==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.


Breaking Changes
================

Changes
=======

 - Improved the resiliency of the retrieval of large results via HTTP. Queries
   are now aborted and result in an error if they consume too much memory.

 - Changed the ``QueryStats`` JMX MBean to deliver node-based values instead of
   cluster-based values.
   This makes it possible to spot performance discrepancies between nodes more
   easily.

Fixes
=====

 - Fixed an issue that led to ``ArrayIndexOutOfBoundsException`` on
   ``DISTINCT`` or ``GROUP BY`` queries on the ``sys.shards`` table.

 - Fixed an issue that could cause ``sys.operations`` entries to remain even
   after the operation has finished.

 - Optimized the JMX ``QueryStats`` MBean to prevent it from putting too much
   load on the cluster.

 - Fixed the calculation of the ``OverallQueryAverageDuration`` ``QueryStats``
   MBean.

 - The internal ``fetchSize`` is now dynamic based on configured heap and has
   an upper bound to prevent ``OutOfMemory`` errors if a postgres client
   retrieves a large result set without setting a ``fetchSize``, or setting a
   ``fetchSize`` which is too large.

 - Fixed a race condition that could lead to ``KILL (ALL)`` causing queries to
   get stuck instead of interrupting them.

 - Fix NPE when ordering by system columns

 - Fixed validation so that ``SELECT DISTINCT`` can be used only if there
   is no ``GROUP BY`` present or if the set of ``GROUP BY`` expressions is
   the same as the set ``SELECT`` expressions.

 - Added validation that ``ORDER BY`` symbols are included in the ``SELECT``
   list when ``DISTINCT`` is used.